--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.twitter4j</groupId>
-			<artifactId>twitter4j-core</artifactId>
-			<version>3.0.5</version>
+			<groupId>com.twitter</groupId>
+			<artifactId>hbc-twitter4j-v3</artifactId>
+			<version>1.4.2</version>
 		</dependency>
 	</dependencies>
 </project>
