--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
 			<artifactId>postgresql</artifactId>
 			<version>9.1-901-1.jdbc4</version>
 		</dependency>
+		<dependency>
+			<groupId>org.simpleframework</groupId>
+			<artifactId>simple</artifactId>
+			<version>5.1.6</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
